test_regress/t/t_class_extends_int_param_bad.out
%Error: t/t_class_extends_int_param_bad.v:10:16: Attempting to extend using non-class
                                               : ... note: In instance 't'
   10 |       type T = int
      |                ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
